# dev-utils

./: .gitignore  README.md  dev-utils_tree.txt  mcpkit.tree  pyproject.toml  setup.sh  setupkit-registry.yaml
.doc-gen/: check-report.txt  ignore-patterns.txt  manifest.fletch  manifest.yml
.doc-gen/manifest-backups/: 20260325-101608-manifest.yml  20260406-085439-manifest.yml  20260406-085506-manifest.yml  20260411-160359-manifest.yml  20260413-135523-manifest.yml  20260413-140921-manifest.yml  20260416-104710-manifest.yml  20260511-151103-manifest.yml  20260520-154145-manifest.yml
.doc-gen/output/: .gitignore.md  README.md.md  mcpkit.tree.md  project-tree.txt  pyproject.toml.md  setup.sh.md  setupkit-registry.yaml.md
bash/connection tools/: tmux-launch.sh
bash/container_tools/: docker-python-builder.sh
bash/templates/: .gitignore
containers/adminer/: .env.template  docker-compose.yml  readme.MD
containers/dev-utils-test/: Dockerfile  README.md  docker-compose.lan.yml  docker-compose.yml  setup.sh
containers/pgadmin/: .env.template  README.md  docker-compose.yml
containers/pygotty/: .gitignore  Dockerfile  README.md  docker-compose.yml
containers/python-test/: Dockerfile  README.md  docker-compose.lan.yml  docker-compose.yml
containers/setup-tests/: SETUP.md  containers.yaml  setup.sh
docs/: dev-utils-readme-changeset.md
docs/changedocs/: dev-utils-restructure-analysis.md  (+1 more)
python/: pyproject.toml
python/dbkit/: pyproject.toml
python/dbkit/config/postgres/: config.yaml.template  pgpass.py  setup.py
python/dbkit/dbkit/: __init__.py  connection.py  exceptions.py  resolver.py
python/dbkit/dbkit/config/postgres/: setup.py
python/dbkit/docs/: project_structure.md
python/dbkit/docs/change/: CHANGEDOC_DBKIT_CLIENT_ENCODING.md  connection_indentation_fix_2026-06-29.md  dbkit_client_encoding_fix.md
python/dbkit/tests/: test_dbkit_connection.py
python/imagekit/: README.md  pyproject.toml
python/imagekit/docs/.archive/: project structure.md
python/imagekit/docs/changedocs/: imagekit-encode-fixes.md  imagekit-test-encode-fixes.md
python/imagekit/docs/design/: imagekit-new-package.md  project structure.md
python/imagekit/src/imagekit/: __init__.py  cli.py  encode.py
python/imagekit/src/imagekit/data/: imagekit.yaml
python/imagekit/tests/: test_encode.py
python/menukit/: menukit-pyproject.toml  pyproject.toml
python/menukit/menukit/: __init__.py  input_plugin.py  menu_builder.py  prompts.py
python/nmkit/: .gitignore  install.sh  pyproject.toml
python/nmkit/docs/: project_structure.md
python/nmkit/docs/change/: nmkit-click-filter-changedoc.md  nmkit-connect-button-fix-changedoc.md  nmkit-handoff.md  nmkit-install-progress-changedoc.md  nmkit-install-wipe-changedoc.md  nmkit-nxplayer-fixes-changedoc.md  nmkit-platform-changedoc.md  nmkit-platform-installer-changedoc.md  nmkit-pylint-generated-changedoc.md  nmkit-pylint-test-fixes-changedoc.md  nmkit-session-dir-changedoc.md  nmkit-ui-restructure-changedoc.md  project_structure.md
python/nmkit/src/nmkit/: __init__.py  __main__.py  assets.py  config.py  connEdit_ui.py  connection_dialog.py  exceptions.py  icons.py  launcher.py  logger.py  nmLauncher_ui.py  ui.py
python/nmkit/src/nmkit/data/: connections.yaml  nmkit.yaml  platform.yaml
python/nmkit/src/nmkit/data/desktop/: nmkit.desktop
python/nmkit/src/nmkit/data/qt_designs/: connEdit.ui  nmLauncher.ui
python/nmkit/tests/: test_assets.py  test_config.py  test_icons.py  test_launcher.py
python/packkit/: .gitignore  pyproject.toml
python/packkit/data/: packkit.yaml.template  wcyj-meet-packkit.yaml
python/packkit/docs/: packkit-meta.md  packkit-source.md  packkit-tests.md  packkit-tree.md
python/packkit/src/packkit/: __init__.py  cli.py  collector.py  config.py  exceptions.py  logger.py  packer.py  shipper.py
python/packkit/tests/: conftest.py  test_cli.py  test_collector.py  test_config.py  test_exceptions.py  test_packer.py  test_shipper.py
python/ptykit/: README.md  pyproject.toml
python/ptykit/docs/change/: ptykit-config-changeset.md  ptykit-context-changeset.md  ptykit-exceptions-initialize-changeset.md  ptykit-installer-changeset.md  ptykit-plugin-changeset.md  ptykit-wrapper-changeset.md
python/ptykit/docs/design/: ptykit-design.md
python/ptykit/src/ptykit/: config.py  context.py  exceptions.py  initialize.py  installer.py  plugin.py  wrapper.py
python/ptykit/tests/: test_config.py  test_context.py  test_plugin.py  test_wrapper.py
python/pxkit/: README.md  install.sh  pyproject.toml
python/pxkit/docs/: project_structure.md  pxkit-handoff.md  roadmap.md  system-footprint.md
python/pxkit/docs/change/: pxkit-multi-server-changedoc.md  pxkit-pylint-fixes-changedoc.md  pxkit-pyside6-changedoc.md  pxkit-test-connection-changedoc.md  pxkit-type-terminal-changedoc.md
python/pxkit/docs/design/: pxkit-handoff.md
python/pxkit/src/pxkit/: __init__.py  __main__.py  config.py  connection.py  exceptions.py  launcher.py  logger.py  ui.py
python/pxkit/src/pxkit/data/: pxkit.yaml
python/pxkit/src/pxkit/design/: roadmap.md
python/pxkit/tests/: test_config.py  test_connection.py  test_launcher.py
python/sniffkit/: README.md  pyproject.toml
python/sniffkit/.doc-gen/output/: project-tree.txt
python/sniffkit/docs/change/: todo.md  treekit-save-structure-doc.md
python/sniffkit/docs/design/: handoff-2026-05-20b.md  sniffkit-design.md
python/sniffkit/src/sniffkit/: classifier.py
python/sniffkit/src/sniffkit/detectors/: __init__.py  css_detector.py  html_detector.py  json_detector.py  md_detector.py  sql_detector.py
python/sniffkit/tests/: test_classifier.py  test_detectors.py
python/treekit/: LICENSE.md  README.md  pyproject.toml  treekit.yaml
python/treekit/docs/: project_structure.md
python/treekit/docs/design/: templates_design.md
python/treekit/src/treekit/: __init__.py  builder.py  cli.py  exceptions.py  node.py  parser.py  pyproject.toml  treekit.yaml
python/treekit/tests/: conftest.py  test_builder.py  test_cli.py  test_exceptions.py  test_node.py  test_parser.py
(+332 files in other folders)
