[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Install from this directory:
#   cd ~/projects/dev-utils/python/dbkit
#   pip install -e .
#
# Or from anywhere:
#   pip install -e ~/projects/dev-utils/python/dbkit
#
# psycopg requires either the binary or source build:
#   pip install "psycopg[binary]"
# or add it to your system packages. The package declares psycopg as
# a dependency without the [binary] extra to stay installer-agnostic.

[project]
name = "dbkit"
version = "0.1.0"
description = "PostgreSQL connection and resolver utilities for dev-utils / Project Crew"
authors = [
    { name = "Carolyn Boyle" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dbkit*"]