[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Install from this directory:
#   cd ~/projects/dev-utils/python/nmkit
#   pip install -e .
#
# Or from anywhere:
#   pip install -e ~/projects/dev-utils/python/nmkit

[project]
name = "nmkit"
version = "0.1.0"
description = "NoMachine connection launcher for desktop and demo use"
authors = [
    { name = "Carolyn Boyle" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "PySide6>=6.6",
    "requests>=2.31.0",
    "urllib3>=2.0",
]

[project.scripts]
nmkit = "nmkit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nmkit*"]

[tool.setuptools.package-data]
nmkit = [
    "data/*.yaml",
    "data/fonts/.gitkeep",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.master]
extension-pkg-allow-list = ["PySide6"]
ignore = ["connEdit_ui.py"]

[tool.pylint."messages control"]
disable = ["no-name-in-module"]
