[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packkit"
version = "0.1.0"
description = "Pack and ship server configuration archives."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Carolyn Boyle" }
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
packkit = "packkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
packkit = ["data/*.yaml.template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = ["too-few-public-methods"]
