[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Install from this directory:
#   cd ~/projects/dev-utils/python/pxkit
#   pip install -e .
#
# Or from anywhere:
#   pip install -e ~/projects/dev-utils/python/pxkit

[project]
name = "pxkit"
version = "0.1.0"
description = "Proxmox VM launcher for desktop and demo use"
authors = [
    { name = "Carolyn Boyle" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "keyring>=24.0",
    "urllib3>=2.0",
    "PySide6>=6.6",
    "secretstorage>=3.3",
    "jeepney>=0.8",
]

[project.scripts]
pxkit = "pxkit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pxkit*"]

[tool.setuptools.package-data]
pxkit = ["data/*.yaml"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
