[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treekit"
version = "0.1.0"
description = "Create directory trees from markdown structure specifications."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Carolyn Boyle" }
]
dependencies = []

[project.scripts]
treekit = "treekit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
treekit = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = ["too-few-public-methods"]
